Fix speaker alignment

--- a/app/styles/components/speaker/_base.scss
+++ b/app/styles/components/speaker/_base.scss
@@ -1,25 +1,40 @@
 .Speaker {
-  justify-content: flex-end;
-  display: flex;
   margin-bottom: 50px;
+  text-align: center;
+
+  @include breakpoint(mid) {
+    justify-content: center;
+    display: flex;
+  }
 
   &-name {
     color: $color-jsconf-yellow;
-    display: inline;
-    margin-right: 0.3em;
+    line-height: 1;
+    margin-bottom: 0.2em;
+
+    @include breakpoint(mid) {
+      display: inline;
+      margin-right: 0.5em;
+    }
   }
 
   &-photo {
     border-radius: 50%;
     height: 200px;
-    margin-right: 50px;
+    margin-bottom: 10px;
     width: 200px;
+
+    @include breakpoint(mid) {
+      margin-right: 50px;
+    }
   }
 
-  &:nth-child(2n) &-photo {
-    margin-left: 50px;
-    margin-right: 0;
-    order: 1;
+  @include breakpoint(mid) {
+    &:nth-child(2n) &-photo {
+      margin-left: 50px;
+      margin-right: 0;
+      order: 1;
+    }
   }
 
   &-company {
@@ -28,18 +43,28 @@
 
   &-details {
     padding: 10px;
-    text-align: left;
-    width: 50%;
+
+    @include breakpoint(mid) {
+      text-align: left;
+      width: 50%;
+    }
   }
 
   &-desc {
     line-height: 1.4em;
   }
 
+  &-links {
+    justify-content: space-around;
+    display: inline-flex;
+    margin-bottom: 0.2em;
+    width: 4.5em;
+  }
+
   &-link {
     font-size: 1.2em;
-    margin-left: 0.4em;
 
+    // No underline
     &::before {
       display: none;
     }
